Fix overflow problem
Former-commit-id: c3620248c82ab62e94dc7063482ef519dd05c488

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  overflow-x: hidden;
+  height: 100%;
 }
 
 code {
